feat/add-day-and-task-components

--- a/src/components/RunningTask/RunningTask.module.scss
+++ b/src/components/RunningTask/RunningTask.module.scss
@@ -21,7 +21,6 @@
 }
 
 .RunningTaskContainer {
-    background-color: #303030;
     height: 75px;
-    border-bottom: solid #8a8a8a 0.1px;
+    border-bottom: solid #444444 0.1px;
 }
