--- a/src/components/RunningTask/RunningTask.module.scss
+++ b/src/components/RunningTask/RunningTask.module.scss
@@ -1,8 +1,6 @@
 .GreenBtn {
     border: none;
-    position: absolute;
-    bottom: 70px;
-    right: 10px;
+    margin: 0 10px 0 0;
 
     display: flex;
     flex-direction: column;
@@ -23,4 +21,8 @@
 .RunningTaskContainer {
     height: 75px;
     border-bottom: solid #444444 0.1px;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
