--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -3,7 +3,6 @@
     height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
     box-sizing: border-box;
-    background-color: rgb(116, 116, 116);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,12 +11,11 @@
 .ContentContainer {
     max-width: 500px;
     width: 100%;
-    background-color: #1e1e1e;
-    height: 100%;
-    padding: 70px 0 0 0;
 }
 
 .FooterContainer {
     max-width: 500px;
     width: 100%;
+    position: sticky;
+    bottom: 0px;
 }
