--- a/src/components/Tasks/Task/Task.module.scss
+++ b/src/components/Tasks/Task/Task.module.scss
@@ -12,7 +12,11 @@
 
 .DescriptionBlock {
     display: flex;
-    margin: 20px;
+    align-items: center;
+    flex-grow: 1;
+
+    padding: 20px 10px 20px 20px;
+    height: 100%;
 
     .Title {
         color: #8a8a8a;
@@ -20,12 +24,15 @@
 }
 
 .TimePlayBlock {
-    margin: 20px;
+    padding: 20px 20px 20px 10px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     .Duration {
         color: #ffffff;
-        margin: 0 0 7px 0;
+        margin: 0 0 10px 0;
+    }
+    .Icon {
+        margin-right: 5px;
     }
 }
