--- a/src/components/Tasks/Task/Task.module.scss
+++ b/src/components/Tasks/Task/Task.module.scss
@@ -17,7 +17,17 @@
 
     padding: 20px 10px 20px 20px;
     height: 100%;
-
+    .Counter {
+        width: 25px;
+        height: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: solid #8a8a8a 0.2px;
+        border-radius: 7px;
+        color: #8a8a8a;
+        margin: 0 10px 0 0;
+    }
     .Title {
         color: #8a8a8a;
     }
