--- a/src/components/Layout/BottomMenu/BottomMenu.module.scss
+++ b/src/components/Layout/BottomMenu/BottomMenu.module.scss
@@ -1,5 +1,8 @@
+$secondary-container-dark-color: #303030; 
+$btn-dark-color: #8a8a8a;
+
 .BottomMenu {
-    background-color: #303030;
+    background-color: $secondary-container-dark-color;
     width: 100%;
     height: 60px;
     display: grid;
@@ -11,7 +14,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: #8a8a8a;
+    color: $btn-dark-color;
     background-position: center;
     transition: background 0.8s;
 
@@ -24,7 +27,7 @@
         color: #3e84dc;
     }
     &:hover {
-        background: #303030 radial-gradient(circle, transparent 1%, #303030 1%) center/15000%;
+        background: $secondary-container-dark-color radial-gradient(circle, transparent 1%, $secondary-container-dark-color 1%) center/15000%;
     }
     &:active {
         background-color: #525252;
