--- a/src/components/TaskDetails/TaskDetails.module.scss
+++ b/src/components/TaskDetails/TaskDetails.module.scss
@@ -1,10 +1,12 @@
+$primary-container-dark-color: #1e1e1e; 
+
 .DetailsContainer {
     position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
     overflow: hidden;
-    background-color: #1e1e1e; 
+    background-color: $primary-container-dark-color; 
     transition: all 1s;
     z-index: 10;
 }
