--- a/src/components/Tasks/Task/Task.module.scss
+++ b/src/components/Tasks/Task/Task.module.scss
@@ -1,7 +1,10 @@
+$secondary-container-dark-color: #303030; 
+$gray-color: #8a8a8a;
+
 .TaskContainer {
     width: 100%;
     height: 70px;
-    background-color: #303030;
+    background-color: $secondary-container-dark-color;
     border-bottom: solid #444444 0.1px;
 
     display: flex;
@@ -23,13 +26,13 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        border: solid #8a8a8a 0.2px;
+        border: solid $gray-color 0.2px;
         border-radius: 7px;
-        color: #8a8a8a;
+        color: $gray-color;
         margin: 0 10px 0 0;
     }
     .Title {
-        color: #8a8a8a;
+        color: $gray-color;
     }
 }
 
