--- a/src/components/TaskDetails/TaskDetails.module.scss
+++ b/src/components/TaskDetails/TaskDetails.module.scss
@@ -15,3 +15,69 @@ $primary-container-dark-color: #1e1e1e;
     top: 100%;
     height: 0;
 }
+
+.Top {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    margin: 0 0 20px 0;
+
+    .SaveBtn {
+        color: #3e84dc;
+        background-color: transparent;
+        border: none;
+        outline:none;
+        font-size: 15px;
+        margin: 0px;
+        padding: 0px;
+    }
+}
+
+.DescriptionBlock {
+    margin: 0 0 20px 0;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0 20px 0 0;
+
+    input {
+        background-color: transparent;
+        color: #686868;
+        direction: rtl;
+        outline: none;
+        padding: 10px 0 10px 0;
+        border: none;
+        box-sizing: border-box;
+    }
+
+}
+
+.StaticBlock {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+
+    h6 {
+        color: #686868;
+    }
+}
+
+.OthersContainer {
+    padding: 20px;
+
+    .OthersItemBlock {
+        display: flex;
+        align-items: center;
+        padding: 15px 0 15px 0;
+
+        h5 {
+            color: #ff3333;
+            margin: 0 0 0 25px;
+        }
+    }
+}
+
+.Divider {
+    height: 1px;
+    background-color: #464646;
+
+}
