--- a/src/components/TaskDetails/TaskDetails.module.scss
+++ b/src/components/TaskDetails/TaskDetails.module.scss
@@ -1,7 +1,7 @@
 $primary-container-dark-color: #1e1e1e; 
 
 .DetailsContainer {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
