--- a/src/components/Layout/BottomMenu/BottomMenu.module.scss
+++ b/src/components/Layout/BottomMenu/BottomMenu.module.scss
@@ -17,12 +17,10 @@ $btn-dark-color: #8a8a8a;
     color: $btn-dark-color;
     background-position: center;
     transition: background 0.8s;
-
     background-color: transparent;
     border: none;
     outline:none;
-    font-size: 11px;
-
+    font-size: 14px;
     &:focus {
         color: #3e84dc;
     }
@@ -34,12 +32,15 @@ $btn-dark-color: #8a8a8a;
         background-size: 100%;
         transition: background 0s;
     }
+    .Icon {
+        display: block;
+        margin-bottom: 5px;
+    }
+    p {
+        margin-bottom: -9px;
+    }
 }
 
-.Icon {
-    display: block;
-    margin-bottom: 7px;
-}
 
 
   
