--- a/src/components/Layout/BottomMenu/BottomMenu.module.scss
+++ b/src/components/Layout/BottomMenu/BottomMenu.module.scss
@@ -9,6 +9,13 @@ $btn-dark-color: #8a8a8a;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+.Link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+
 .Btn {
     display: flex;
     flex-direction: column;
@@ -21,6 +28,9 @@ $btn-dark-color: #8a8a8a;
     border: none;
     outline:none;
     font-size: 14px;
+    width: 100%;
+    height: 100%;
+    
     &:focus {
         color: #3e84dc;
     }
