--- a/src/components/SettingPage/SettingItem/SettingItem.module.scss
+++ b/src/components/SettingPage/SettingItem/SettingItem.module.scss
@@ -2,8 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: solid #fff;
-    padding: 15px;
+    padding: 15px 25px 15px 25px;
     .Left {
         h5 {
             color: #ffffff;
