--- a/src/components/TimerPage/TaskDetails/TaskDetails.module.scss
+++ b/src/components/TimerPage/TaskDetails/TaskDetails.module.scss
@@ -70,9 +70,16 @@ $primary-container-dark-color: #1e1e1e;
         align-items: center;
         padding: 25px 0 25px 0;
 
-        h5 {
+        h5.Delete {
             color: #ff3333;
             margin: 0 0 0 25px;
+        }
+        h5.Project {
+            margin: 0 0 0 25px;
+            color: #8a8a8a;
+        }
+        .Icon {
+            margin: 0 0 5px 0;
         }
     }
 }
