--- a/src/components/TimerPage/TaskDetails/Modal/Modal.module.scss
+++ b/src/components/TimerPage/TaskDetails/Modal/Modal.module.scss
@@ -14,7 +14,7 @@
 .ModalContent {
     background-color: #303030;
     margin: auto;
-    padding: 20px;
+    padding: 20px 20px 5px 20px;
     border-radius: 3px;
     width: 80%;
     max-width: 450px;
@@ -28,12 +28,35 @@
     display: flex;
     align-items: center;
     padding: 12px;
-    input {
+    z-index: 50;
+    input[type=radio] {
         margin: -5px 15px 0 0;
         padding: 0px;
     }
     label {
         margin: 0px;
         padding: 0px;
+    }
+    input[type=text] {
+        background-color: transparent;
+        color: #686868;
+        outline: none;
+        padding: 10px 0 10px 10px;
+        border: solid #686868;
+        border-right: none;
+        font-size: 15px;
+        box-sizing: border-box;
+        width: 80%;
+    }
+    button {
+        border: none;
+        outline:none;
+        background-color: #33d54e;
+        color: #ffffff;
+        flex-grow: 1;
+        border-radius: 0 2px 2px 0;
+        height: 45px;
+        width: 60px;
+        
     }
 }
