--- a/src/components/TimerPage/Tasks/Task/Task.module.scss
+++ b/src/components/TimerPage/Tasks/Task/Task.module.scss
@@ -20,22 +20,23 @@ $gray-color: #8a8a8a;
     padding: 20px 10px 20px 20px;
     height: 100%;
     .Counter {
-        width: 25px;
-        height: 25px;
+        width: 20px;
+        height: 20px;
         display: flex;
         align-items: center;
         justify-content: center;
         border: solid $gray-color 0.2px;
-        border-radius: 7px;
+        border-radius: 5px;
         color: $gray-color;
         margin: 0 10px 0 0;
         p {
-            margin: 5px 0 0 0;
+            margin: 4px 0 0 0;
+            font-size: 11px;
         }
     }
     .Title {
         color: $gray-color;
-        margin: 4px 0 0 0;
+        font-size: 12px;
     }
 }
 
